更新配置文件
去除无用依赖

去除无用依赖

--- a/mybatis-boot/src/main/resources/application.yml
+++ b/mybatis-boot/src/main/resources/application.yml
@@ -31,6 +31,7 @@ mybatis:
     reload:
       enable: true
       mapper-locations: classpath*:/mapper/*.xml
+      url-prefix: web/mybatis/reload/cao
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 控制台输出日志
 
