--- a/mybatis-boot/pom.xml
+++ b/mybatis-boot/pom.xml
@@ -17,11 +17,11 @@
     </properties>
 
     <dependencies>
-        <!--<dependency>-->
-        <!--    <groupId>io.github.youtiaoguagua</groupId>-->
-        <!--    <artifactId>mybatis-hotswap-springboot-starter</artifactId>-->
-        <!--    <version>1.0.0</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>io.github.youtiaoguagua</groupId>
+            <artifactId>mybatis-hotswap-springboot-starter</artifactId>
+            <version>1.0.3-RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
