--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -13,14 +13,15 @@
 
     <groupId>io.github.youtiaoguagua</groupId>
     <artifactId>mybatis-hotswap-springboot-starter</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.5-RELEASE</version>
 
     <name>springboot-mybatis-hotswap-starter</name>
     <description>springboot-mybatis-hotswap-starter</description>
 
     <properties>
         <java.version>1.8</java.version>
-        <dir.watch>0.15.0</dir.watch>
+        <hutool.version>5.7.17</hutool.version>
+        <mybatis.version>3.5.7</mybatis.version>
     </properties>
 
     <dependencies>
@@ -41,17 +42,12 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
-            <version>5.7.17</version>
-        </dependency>
-        <dependency>
-            <groupId>io.methvin</groupId>
-            <artifactId>directory-watcher</artifactId>
-            <version>${dir.watch}</version>
+            <version>${hutool.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.5.7</version>
+            <version>${mybatis.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -81,11 +77,20 @@
 
     <build>
         <plugins>
-             <!--插件maven-clean-plugin，用于在编译前，清除之前编译的文件、文件夹等，避免残留之前的内容 -->
+            <!--插件maven-clean-plugin，用于在编译前，清除之前编译的文件、文件夹等，避免残留之前的内容 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>auto-clean</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <filesets>
                         <fileset>
@@ -155,7 +160,8 @@
                         </goals>
                         <configuration>
                             <!-- 复制前端打包文件到这里 -->
-                            <outputDirectory>../mybatis-boot/src/main/resources/web</outputDirectory>
+                            <outputDirectory>../mybatis-hotswap-springboot-starter/src/main/resources/web
+                            </outputDirectory>
                             <overwrite>true</overwrite>
                             <resources>
                                 <resource>
@@ -163,10 +169,7 @@
                                     <directory>../mybatis-reload-web/dist</directory>
                                     <includes>
                                         <!-- 具体根据实际前端代码、及目录结构进行配置-->
-                                        <include>css/</include>
-                                        <include>fonts/</include>
-                                        <include>img/</include>
-                                        <include>js/</include>
+                                        <include>web/</include>
                                         <include>favicon.ico</include>
                                         <include>index.html</include>
                                     </includes>
