--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>io.github.youtiaoguagua</groupId>
     <artifactId>mybatis-hotswap-springboot-starter</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.4-RELEASE</version>
 
     <name>springboot-mybatis-hotswap-starter</name>
     <description>springboot-mybatis-hotswap-starter</description>
@@ -86,6 +86,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>auto-clean</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <filesets>
                         <fileset>
@@ -155,7 +164,7 @@
                         </goals>
                         <configuration>
                             <!-- 复制前端打包文件到这里 -->
-                            <outputDirectory>../mybatis-boot/src/main/resources/web</outputDirectory>
+                            <outputDirectory>../mybatis-hotswap-springboot-starter/src/main/resources/web</outputDirectory>
                             <overwrite>true</overwrite>
                             <resources>
                                 <resource>
@@ -163,10 +172,7 @@
                                     <directory>../mybatis-reload-web/dist</directory>
                                     <includes>
                                         <!-- 具体根据实际前端代码、及目录结构进行配置-->
-                                        <include>css/</include>
-                                        <include>fonts/</include>
-                                        <include>img/</include>
-                                        <include>js/</include>
+                                        <include>web/</include>
                                         <include>favicon.ico</include>
                                         <include>index.html</include>
                                     </includes>
