--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -20,7 +20,8 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <dir.watch>0.15.0</dir.watch>
+        <hutool.version>5.7.17</hutool.version>
+        <mybatis.version>3.5.7</mybatis.version>
     </properties>
 
     <dependencies>
@@ -41,17 +42,12 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
-            <version>5.7.17</version>
-        </dependency>
-        <dependency>
-            <groupId>io.methvin</groupId>
-            <artifactId>directory-watcher</artifactId>
-            <version>${dir.watch}</version>
+            <version>${hutool.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.5.7</version>
+            <version>${mybatis.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -81,7 +77,7 @@
 
     <build>
         <plugins>
-             <!--插件maven-clean-plugin，用于在编译前，清除之前编译的文件、文件夹等，避免残留之前的内容 -->
+            <!--插件maven-clean-plugin，用于在编译前，清除之前编译的文件、文件夹等，避免残留之前的内容 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -164,7 +160,8 @@
                         </goals>
                         <configuration>
                             <!-- 复制前端打包文件到这里 -->
-                            <outputDirectory>../mybatis-hotswap-springboot-starter/src/main/resources/web</outputDirectory>
+                            <outputDirectory>../mybatis-hotswap-springboot-starter/src/main/resources/web
+                            </outputDirectory>
                             <overwrite>true</overwrite>
                             <resources>
                                 <resource>
