--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -62,7 +62,7 @@
     <scm>
         <connection>scm:git:https://github.com/youtiaoguagua/mybatis-hotswap</connection>
         <developerConnection>scm:git:git@github.com/youtiaoguagua/mybatis-hotswap.git</developerConnection>
-        <url>youtiaoguagua/mybatis-hotswap</url>
+        <url>https://github.com/youtiaoguagua/mybatis-hotswap</url>
         <tag>HEAD</tag>
     </scm>
 
