--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -2,14 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>io.github.youtiaoguagua</groupId>
-        <artifactId>mybatis-hotswap</artifactId>
-        <version>1.0.0</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.6.1</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
+    <groupId>io.github.youtiaoguagua</groupId>
     <artifactId>mybatis-hotswap-springboot-starter</artifactId>
     <version>1.0.6-SNAPSHOT</version>
 
@@ -90,6 +92,42 @@
         </license>
     </licenses>
 
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.8</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>sonatype-staging</serverId>
+                            <nexusUrl>https://s01.oss.sonatype.org</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>snapshot</id>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>sonatype-snapshots</id>
+                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+                </snapshotRepository>
+                <repository>
+                    <id>sonatype-staging</id>
+                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
+
+
     <build>
         <plugins>
             <!--插件maven-clean-plugin，用于在编译前，清除之前编译的文件、文件夹等，避免残留之前的内容 -->
@@ -121,46 +159,46 @@
             </plugin>
 
             <!--frontend-maven-plugin为项目本地下载/安装Node和NPM，运行npm install命令-->
-            <plugin>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.12.0</version>
-                <configuration>
-                    <workingDirectory>../mybatis-reload-web</workingDirectory>
-                    <nodeDownloadRoot>https://npm.taobao.org/mirrors/node/</nodeDownloadRoot>
-                    <npmDownloadRoot>https://npm.taobao.org/mirrors/npm/</npmDownloadRoot>
-                    <yarnDownloadRoot>https://npm.taobao.org/mirrors/yarn/</yarnDownloadRoot>
-                    <nodeVersion>v16.13.0</nodeVersion>
-                    <yarnVersion>v1.22.17</yarnVersion>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>install node and yarn</id>
-                        <goals>
-                            <goal>install-node-and-yarn</goal>
-                        </goals>
-                        <phase>generate-resources</phase>
-                    </execution>
-                    <execution>
-                        <id>yarn install</id>
-                        <goals>
-                            <goal>yarn</goal>
-                        </goals>
-                        <configuration>
-                            <arguments>install --registry https://registry.npm.taobao.org/</arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>yarn run build</id>
-                        <goals>
-                            <goal>yarn</goal>
-                        </goals>
-                        <configuration>
-                            <arguments>run build:prod</arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+            <!--    <groupId>com.github.eirslett</groupId>-->
+            <!--    <artifactId>frontend-maven-plugin</artifactId>-->
+            <!--    <version>1.12.0</version>-->
+            <!--    <configuration>-->
+            <!--        <workingDirectory>../mybatis-reload-web</workingDirectory>-->
+            <!--        <nodeDownloadRoot>https://npm.taobao.org/mirrors/node/</nodeDownloadRoot>-->
+            <!--        <npmDownloadRoot>https://npm.taobao.org/mirrors/npm/</npmDownloadRoot>-->
+            <!--        <yarnDownloadRoot>https://npm.taobao.org/mirrors/yarn/</yarnDownloadRoot>-->
+            <!--        <nodeVersion>v16.13.0</nodeVersion>-->
+            <!--        <yarnVersion>v1.22.17</yarnVersion>-->
+            <!--    </configuration>-->
+            <!--    <executions>-->
+            <!--        <execution>-->
+            <!--            <id>install node and yarn</id>-->
+            <!--            <goals>-->
+            <!--                <goal>install-node-and-yarn</goal>-->
+            <!--            </goals>-->
+            <!--            <phase>generate-resources</phase>-->
+            <!--        </execution>-->
+            <!--        <execution>-->
+            <!--            <id>yarn install</id>-->
+            <!--            <goals>-->
+            <!--                <goal>yarn</goal>-->
+            <!--            </goals>-->
+            <!--            <configuration>-->
+            <!--                <arguments>install &#45;&#45;registry https://registry.npm.taobao.org/</arguments>-->
+            <!--            </configuration>-->
+            <!--        </execution>-->
+            <!--        <execution>-->
+            <!--            <id>yarn run build</id>-->
+            <!--            <goals>-->
+            <!--                <goal>yarn</goal>-->
+            <!--            </goals>-->
+            <!--            <configuration>-->
+            <!--                <arguments>run build:prod</arguments>-->
+            <!--            </configuration>-->
+            <!--        </execution>-->
+            <!--    </executions>-->
+            <!--</plugin>-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -242,18 +280,6 @@
                         <arg>--pinentry-mode</arg>
                         <arg>loopback</arg>
                     </gpgArguments>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>sonatype-staging</serverId>
-                    <nexusUrl>https://s01.oss.sonatype.org</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
         </plugins>
