--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -159,46 +159,46 @@
             </plugin>
 
             <!--frontend-maven-plugin为项目本地下载/安装Node和NPM，运行npm install命令-->
-            <!--<plugin>-->
-            <!--    <groupId>com.github.eirslett</groupId>-->
-            <!--    <artifactId>frontend-maven-plugin</artifactId>-->
-            <!--    <version>1.12.0</version>-->
-            <!--    <configuration>-->
-            <!--        <workingDirectory>../mybatis-reload-web</workingDirectory>-->
-            <!--        <nodeDownloadRoot>https://npm.taobao.org/mirrors/node/</nodeDownloadRoot>-->
-            <!--        <npmDownloadRoot>https://npm.taobao.org/mirrors/npm/</npmDownloadRoot>-->
-            <!--        <yarnDownloadRoot>https://npm.taobao.org/mirrors/yarn/</yarnDownloadRoot>-->
-            <!--        <nodeVersion>v16.13.0</nodeVersion>-->
-            <!--        <yarnVersion>v1.22.17</yarnVersion>-->
-            <!--    </configuration>-->
-            <!--    <executions>-->
-            <!--        <execution>-->
-            <!--            <id>install node and yarn</id>-->
-            <!--            <goals>-->
-            <!--                <goal>install-node-and-yarn</goal>-->
-            <!--            </goals>-->
-            <!--            <phase>generate-resources</phase>-->
-            <!--        </execution>-->
-            <!--        <execution>-->
-            <!--            <id>yarn install</id>-->
-            <!--            <goals>-->
-            <!--                <goal>yarn</goal>-->
-            <!--            </goals>-->
-            <!--            <configuration>-->
-            <!--                <arguments>install &#45;&#45;registry https://registry.npm.taobao.org/</arguments>-->
-            <!--            </configuration>-->
-            <!--        </execution>-->
-            <!--        <execution>-->
-            <!--            <id>yarn run build</id>-->
-            <!--            <goals>-->
-            <!--                <goal>yarn</goal>-->
-            <!--            </goals>-->
-            <!--            <configuration>-->
-            <!--                <arguments>run build:prod</arguments>-->
-            <!--            </configuration>-->
-            <!--        </execution>-->
-            <!--    </executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>1.12.0</version>
+                <configuration>
+                    <workingDirectory>../mybatis-reload-web</workingDirectory>
+                    <nodeDownloadRoot>https://npm.taobao.org/mirrors/node/</nodeDownloadRoot>
+                    <npmDownloadRoot>https://npm.taobao.org/mirrors/npm/</npmDownloadRoot>
+                    <yarnDownloadRoot>https://npm.taobao.org/mirrors/yarn/</yarnDownloadRoot>
+                    <nodeVersion>v16.13.0</nodeVersion>
+                    <yarnVersion>v1.22.17</yarnVersion>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>install node and yarn</id>
+                        <goals>
+                            <goal>install-node-and-yarn</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                    </execution>
+                    <execution>
+                        <id>yarn install</id>
+                        <goals>
+                            <goal>yarn</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>install --registry https://registry.npm.taobao.org/</arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>yarn run build</id>
+                        <goals>
+                            <goal>yarn</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run build:prod</arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
