--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>io.github.youtiaoguagua</groupId>
     <artifactId>mybatis-hotswap-springboot-starter</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.6-RELEASE</version>
 
     <name>springboot-mybatis-hotswap-starter</name>
     <description>springboot-mybatis-hotswap-starter</description>
