--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -95,7 +95,7 @@
 
     <profiles>
         <profile>
-            <id>release</id>
+            <id>sonatype</id>
             <build>
                 <plugins>
                     <plugin>
