--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -38,7 +38,7 @@ jobs:
         gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
     - name: Publish to Apache Maven Central
-      run: mvn clean deploy -B -pl mybatis-hotswap-springboot-starter  -am -P sonatype
+      run: mvn clean deploy -B -pl mybatis-hotswap-springboot-starter  -am -P release
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
