--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>io.github.youtiaoguagua</groupId>
     <artifactId>mybatis-hotswap-springboot-starter</artifactId>
-    <version>1.0.6-RELEASE</version>
+    <version>1.0.7-RELEASE</version>
 
     <name>springboot-mybatis-hotswap-starter</name>
     <description>springboot-mybatis-hotswap-starter</description>
@@ -29,37 +29,37 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
             <version>${hutool.version}</version>
         </dependency>
+
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-jwt</artifactId>
             <version>${hutool.version}</version>
         </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate.validator</groupId>
-            <artifactId>hibernate-validator</artifactId>
-        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -123,6 +123,21 @@
                     <id>sonatype-staging</id>
                     <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
                 </repository>
+            </distributionManagement>
+        </profile>
+        <profile>
+            <id>terminus</id>
+            <distributionManagement>
+                <repository>
+                    <id>terminus</id>
+                    <name>terminus release repository</name>
+                    <url>https://repo.terminus.io/content/repositories/releases/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>terminus</id>
+                    <name>terminus snapshot repository</name>
+                    <url>https://repo.terminus.io/content/repositories/snapshots/</url>
+                </snapshotRepository>
             </distributionManagement>
         </profile>
     </profiles>
